# chops

./: README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/chops/: __init__.py  cli.py  client.py  config.py
src/chops/commands/: __init__.py  dq.py  health.py  migrate.py
tests/: test_cli.py  test_config.py  test_dq.py  test_migrate.py
