[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chops"
version = "0.2.0"
description = "ClickHouse Operations CLI — health checks, data quality, schema migrations, and observability"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Antonio Mello", email = "antonio.mello@felhen.com.br" }]
keywords = ["clickhouse", "cli", "data-quality", "observability", "database", "operations"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "clickhouse-connect>=0.7",
    "rich>=13.0",
    "typer>=0.12",
]

[project.scripts]
chops = "chops.cli:app"

[project.urls]
Homepage = "https://github.com/antonio-mello-ai/chops"
Repository = "https://github.com/antonio-mello-ai/chops"
Issues = "https://github.com/antonio-mello-ai/chops/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "mypy>=1.11",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "SIM", "B", "A", "C4", "RET", "PIE"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
